style and scripts

--- a/header.html
+++ b/header.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Website of Elikem's magically palace</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
