--- a/header.html
+++ b/header.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website of Elikem's magically palace</h1>
+        <h1>What Does Identity Mean To You?</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">CLICK ME</a></li>
+                <li><a href="#">CLICK ME</a></li>
+                <li><a href="#">CLICK ME</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h2>About Me</h2>
-            <p>This is where you describe yourself or your project.</p>
+            <h2>About This Website</h2>
+            <p>Click click</p>
         </section>
     </main>
     <footer>
