--- a/header.html
+++ b/header.html
@@ -7,21 +7,16 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <header>
-        <h1>What Does Identity Mean To You?</h1>
+        <h1>Hello World.</h1>
+        <p>Hi! My name is Elikem Kalitsi and I like to create & talk about the unimaginable, that's really it.</p>
         <nav>
             <ul>
-                <li><a href="#">CLICK ME</a></li>
-                <li><a href="#">CLICK ME</a></li>
-                <li><a href="#">CLICK ME</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Essays</a></li>
+                <li><a href="#">Blogs</a></li>
             </ul>
         </nav>
-    </header>
     <main>
-        <section>
-            <h2>About This Website</h2>
-            <p>Click click</p>
-        </section>
     </main>
     <footer>
         <p>© 2024 My Website. All Rights Reserved.</p>
